<?xml version="1.0"?>
<package>
  <name>pepper_ros_image_viz</name>
  <version>0.0.1</version>
  <description> This is a visualization for images published from pepper via ros.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/DavidPL1/pepper_ros_imageviz.git</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="dleins@techfak.uni-bielefeld.de">David Leins</author> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <!--<export>-->
    <!--<nodelet plugin="${prefix}/clf_perception_nodelets.xml"/>-->
  <!--</export>-->
</package>
